Base UI and game state flow

--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "@typescript-eslint/utils": "^8.31.1",
+    "@vite-pwa/nuxt": "^1.0.0",
     "nuxt": "^3.17.1",
+    "nuxt-storage": "^1.2.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
-    "@nuxtjs/pwa": "^3.3.5",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.25.1",
