--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
+    "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.6",
     "@typescript-eslint/utils": "^8.31.1",
     "@vite-pwa/nuxt": "^1.0.0",
     "nuxt": "^3.17.1",
@@ -25,13 +24,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@nuxt/eslint": "^1.3.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.1",
     "vitest": "^3.1.2"
   }
