--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Run code formatter
         run: npm run format
 
+      - name: Run linter
+        run: npm run lint
+
       - name: Run unit tests
         run: npm run test
