--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint . --ext .ts,.vue",
     "format": "prettier --write .",
-    "test": "vitest"
+    "test": "npx vitest run --coverage"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.6",
@@ -26,7 +26,9 @@
     "@eslint/js": "^9.25.1",
     "@nuxt/eslint": "^1.3.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/coverage-v8": "^3.1.2",
     "@vue/test-utils": "^2.4.6",
+    "c8": "^10.1.3",
     "eslint": "^9.26.0",
     "eslint-plugin-vue": "^10.1.0",
     "globals": "^16.0.0",
