--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npx vitest run --coverage"
   },
   "dependencies": {
+    "@nuxtjs/i18n": "^9.5.4",
     "@typescript-eslint/eslint-plugin": "^8.14.1-alpha.6",
     "@typescript-eslint/utils": "^8.31.1",
     "@vite-pwa/nuxt": "^1.0.0",
